<resources>
    <string name="app_name">FileBrowser</string>

    <string name="nav_name_camera">Camera</string>
    <string name="nav_name_music">Music</string>
    <string name="nav_name_picture">Picture</string>
    <string name="nav_name_video">Video</string>
    <string name="nav_name_document">Document</string>
    <string name="nav_name_download">Download</string>
    <string name="nav_name_storage">Storage</string>

    <string name="menu_title_camera">@string/nav_name_camera</string>
    <string name="menu_title_music">@string/nav_name_music</string>
    <string name="menu_title_picture">@string/nav_name_picture</string>
    <string name="menu_title_video">@string/nav_name_video</string>
    <string name="menu_title_document">@string/nav_name_document</string>
    <string name="menu_title_download">@string/nav_name_download</string>
    <string name="menu_title_storage">@string/nav_name_storage</string>
    <string name="menu_title_settings">Settings</string>

    <string name="menu_category_usual">Usual</string>
    <string name="menu_category_other">Other</string>
    <string name="menu_category_device">Device</string>

    <string name="tool_title_list">List</string>
    <string name="tool_title_grid">Grid</string>
    <string name="tool_title_search">Search</string>
    <string name="tool_title_pre">Previous</string>
    <string name="tool_title_next">Next</string>
    <string name="tool_title_selected">SelectAll</string>

    <string name="overview_file_name">CurrentFile：%s</string>
    <string name="overview_folder_name">CurrentFolder：%s</string>
    <string name="overview_file_size">FileSize：%s</string>
    <string name="overview_folder_size">FileCount：%s个</string>
    <string name="overview_file_type">FileSuffix：%s</string>
    <string name="overview_file_date">ModifiedDate：%s</string>
    <string name="overview_folder">Folder</string>
    <string name="overview_selected_counts">%sfiles selected</string>

    <string name="opt_name_copy">copy</string>
    <string name="opt_name_cut">cut</string>
    <string name="opt_name_paste">paste</string>
    <string name="opt_name_rename">rename</string>
    <string name="opt_name_create">create</string>
    <string name="opt_name_delete">delete</string>

    <string name="empty">Empty</string>


    <string name="tool_title_refresh">刷新</string>


    <string name="overview_no_content">无预览图</string>


    <string name="opt_dialog_button_confirm">OK</string>
    <string name="opt_dialog_button_cancel">Cancel</string>

    <string name="opt_msg_create">input file name</string>
    <string name="opt_msg_delete">delete selected files?</string>
    <string name="opt_msg_rename">input new file name</string>
    <string name="opt_msg_paste">paste selected files here?</string>

    <string name="opt_error_file_exist">file exist</string>
    <string name="opt_error_bad_name">bad file name</string>

    <string name="tool_search_hint">input file name</string>
</resources>
