<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_tool_search"
        android:orderInCategory="1"
        android:title="@string/tool_title_search"
        app:actionLayout="@layout/tool_bar_action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_style"
        android:icon="@drawable/ic_tool_style_grid"
        android:orderInCategory="2"
        android:title="@string/tool_title_grid"
        app:showAsAction="always" />

    <item
        android:visible="false"
        android:id="@+id/action_path_pre"
        android:icon="@drawable/ic_tool_preview"
        android:orderInCategory="98"
        android:title="@string/tool_title_pre"
        app:showAsAction="always" />

    <item
        android:visible="false"
        android:id="@+id/action_path_next"
        android:icon="@drawable/ic_tool_next"
        android:orderInCategory="98"
        android:title="@string/tool_title_next"
        app:showAsAction="always" />
</menu>
