<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:menuCategory="container"
        android:id="@+id/selected_tools"
        android:orderInCategory="1">
        <item
            android:id="@+id/action_path_pre"
            android:icon="@drawable/ic_tool_preview"
            android:orderInCategory="1"
            android:title="@string/tool_title_pre"
            android:visible="true"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_path_next"
            android:icon="@drawable/ic_tool_next"
            android:orderInCategory="2"
            android:title="@string/tool_title_next"
            android:visible="false"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_selected"
            android:icon="@drawable/ic_tool_select_all"
            android:orderInCategory="3"
            android:title="@string/tool_title_selected"
            app:showAsAction="always" />
    </group>
    <group
        android:menuCategory="container"
        android:id="@+id/common_tools"
        android:orderInCategory="99">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_tool_search"
            android:orderInCategory="98"
            android:title="@string/tool_title_search"
            app:actionLayout="@layout/tool_bar_action_search"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_change_style"
            android:icon="@drawable/ic_tool_style_grid"
            android:orderInCategory="99"
            android:title="@string/tool_title_grid"
            app:showAsAction="always" />
    </group>


</menu>
